Note frame complated + Smooth animation transitions

--- a/KuranX.App/App.xaml
+++ b/KuranX.App/App.xaml
@@ -28,6 +28,7 @@
                 <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/suresDesing.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/versesDesing.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/libraryDesing.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/NotesDesing.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
