--- a/KuranX.App/Core/Pages/LibraryF/libraryNotesItems.xaml
+++ b/KuranX.App/Core/Pages/LibraryF/libraryNotesItems.xaml
@@ -18,7 +18,11 @@
             <RowDefinition Height="80" />
         </Grid.RowDefinitions>
 
-        <Grid x:Name="loadinItemsGifContent"  Grid.Row="1" Background="#FAFAFA" Panel.ZIndex="5" Visibility="Collapsed">
+        <Grid x:Name="loadinGifContent"  Grid.Row="0" Grid.RowSpan="3" Background="#FAFAFA" Panel.ZIndex="7" Visibility="Visible">
+            <Image gif:ImageBehavior.AnimatedSource="/Resource/Images/Gif/Spinner800.gif" Width="250" Height="250"  RenderOptions.BitmapScalingMode="HighQuality" />
+        </Grid>
+
+        <Grid x:Name="loadinItemsGifContent"  Grid.Row="1" Background="#FAFAFA" Panel.ZIndex="5" Visibility="Visible">
             <Image gif:ImageBehavior.AnimatedSource="/Resource/Images/Gif/Spinner800.gif" Width="250" Height="250"  RenderOptions.BitmapScalingMode="HighQuality" />
         </Grid>
 
@@ -107,7 +111,7 @@
             </Border>
         </Popup>
 
-        <StackPanel  Grid.Row="0" Orientation="Vertical" VerticalAlignment="Center" SnapsToDevicePixels="True" UseLayoutRounding="True">
+        <StackPanel  Grid.Row="0" Orientation="Vertical" VerticalAlignment="Center" SnapsToDevicePixels="True" UseLayoutRounding="True" Style="{DynamicResource aniEffectFadeStack}" Visibility="Hidden" x:Name="loadHeaderAni">
             <Button x:Name="totalFileCount" Style="{DynamicResource libraryFileHeader}" Content="" Tag="Notlarım" Uid="#6610F2" />
             <StackPanel Grid.Column="0" VerticalAlignment="Center" Margin="0 25 0 5">
                 <Border Style="{DynamicResource defaultTabSearchBorder}">
@@ -121,7 +125,7 @@
             <TextBlock x:Name="searchErrMsgTxt" Visibility="Hidden" TextAlignment="Center" Grid.Row="2" Text="Yeterince Uzun Değil Minimum 3 Karakter Olmalı" Margin="5 0 0 0" FontSize="10" Foreground="#DC3545" FontFamily="{DynamicResource PoppinsMedium}" />
         </StackPanel>
 
-        <Border Grid.Row="1">
+        <Border Grid.Row="1" x:Name="loadDetailAni" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
 
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -620,7 +624,7 @@
             </Grid>
         </Border>
 
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Style="{DynamicResource aniEffectFadeStack}" Visibility="Hidden" x:Name="loadControlAni">
             <StackPanel Style="{DynamicResource ResourceKey=ayetlerControlBarStack}">
                 <StackPanel Style="{DynamicResource ResourceKey=ayetlerControlItems}">
                     <Button x:Name="backPage" IsEnabled="False" Style="{DynamicResource ResourceKey=ayetlerControlItemPageButtonLeft}" Tag="ArrowLeft" Content="Kütüphaneye Geri Dön" Click="backPage_Click" />
