--- a/KuranX.App/Core/Pages/LibraryF/libraryOpenFile.xaml
+++ b/KuranX.App/Core/Pages/LibraryF/libraryOpenFile.xaml
@@ -196,13 +196,13 @@
             </Border>
         </Popup>
 
-        <Popup x:Name="noteAddPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="400" Height="490" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+        <Popup x:Name="noteAddPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="400" Height="570" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
-            <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="380" Height="470">
+            <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="380" Height="550">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="50" />
-                        <RowDefinition Height="420" />
+                        <RowDefinition Height="500" />
                     </Grid.RowDefinitions>
                     <Border  Grid.Row="0" Style="{DynamicResource headerBorderTemp}">
                         <TextBlock Text="Yeni Not Al" Style="{DynamicResource popupHeaderText}" />
@@ -214,7 +214,16 @@
                         </Grid.RowDefinitions>
                         <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Width="370" Grid.Row="0">
 
-                            <TextBlock Text="Alınan Pdf" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 0" />
+                            <TextBlock Text="Not Başlığı " FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 0" />
+                            <TextBox Style="{DynamicResource popupDefaulTextBox}" Width="350" x:Name="pdfNoteName" KeyDown="noteName_KeyDown">
+                                <TextBox.Resources>
+                                    <Style TargetType="{x:Type Border}">
+                                        <Setter Property="CornerRadius" Value="5" />
+                                    </Style>
+                                </TextBox.Resources>
+                            </TextBox>
+
+                            <TextBlock Text="Alınan Pdf" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 20 0 0" />
                             <TextBox Style="{DynamicResource popupDefaulTextBox}" IsReadOnly="True" Width="350" x:Name="pdfConnectText">
                                 <TextBox.Resources>
                                     <Style TargetType="{x:Type Border}">
@@ -223,8 +232,8 @@
                                 </TextBox.Resources>
                             </TextBox>
 
-                            <TextBlock Text="Not Başlığı " FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 10 0 0" />
-                            <TextBox Style="{DynamicResource popupDefaulTextBox}" Width="350" x:Name="pdfNoteName" KeyDown="noteName_KeyDown">
+                            <TextBlock Text="Not Türü" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 20 0 0" />
+                            <TextBox Style="{DynamicResource popupDefaulTextBox}" Width="350" x:Name="noteType" IsReadOnly="True">
                                 <TextBox.Resources>
                                     <Style TargetType="{x:Type Border}">
                                         <Setter Property="CornerRadius" Value="5" />
@@ -382,34 +391,42 @@
             <Image gif:ImageBehavior.AnimatedSource="/Resource/Images/Gif/Spinner800.gif" Width="250" Height="250"  RenderOptions.BitmapScalingMode="HighQuality" />
         </Grid>
 
-        <Border Grid.Row="0" Width="350" Height="50" Style="{DynamicResource defaultBorderShadowEffect}">
-            <StackPanel Orientation="Horizontal">
+        <Border Grid.Row="0" Height="80" Width="450" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden" x:Name="loadHeaderAni">
+            <Border Width="350" Height="50" Style="{DynamicResource defaultBorderShadowEffect}">
+                <StackPanel Orientation="Horizontal">
 
-                <Border Width="12" CornerRadius="5 0 0 5" Background="#B30B00" />
-                <Border Width="288" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10 0 10 0">
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock x:Name="loadHeader" Text="" FontSize="18" Style="{DynamicResource subjectFolderHeader}" />
-                        <TextBlock x:Name="loadCreated" Text="" Style="{DynamicResource subjectFolderDate}" />
-                    </StackPanel>
-                </Border>
-                <Border Width="50">
-                    <Button x:Name="subjectItemsDeleteBtn" Style="{DynamicResource versesTabActionButtonReset}" Grid.Column="2" Tag="TrashMD" />
-                </Border>
-            </StackPanel>
-        </Border>
-
-        <Border Grid.Row="1">
-
-            <Border VerticalAlignment="Center" HorizontalAlignment="Center" SnapsToDevicePixels="True" UseLayoutRounding="True">
-                <StackPanel Orientation="Horizontal"  VerticalAlignment="Center">
-                    <Button x:Name="backButton" Content="Geri Dön" Tag="ArrowLeft"  Style="{DynamicResource versesActionMainTabButtonFeed}" Click="backButton_Click" />
-                    <Button x:Name="noteButton" Content="Not Al-Oku" Tag="ClipboardNotes" Style="{DynamicResource versesActionMainTabButtonNote}" Click="noteButton_Click" />
-                    <Button x:Name="openFileWindowButton"  Content="Pencerede Aç" Tag="ArrowRight"  Style="{DynamicResource versesActionMainTabButtonSure}" Click="openFileWindowButton_Click" />
+                    <Border Width="12" CornerRadius="5 0 0 5" Background="#B30B00" />
+                    <Border Width="288" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10 0 10 0">
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock x:Name="loadHeader" Text="" FontSize="18" Style="{DynamicResource subjectFolderHeader}" />
+                            <TextBlock x:Name="loadCreated" Text="" Style="{DynamicResource subjectFolderDate}" />
+                        </StackPanel>
+                    </Border>
+                    <Border Width="50">
+                        <Button x:Name="subjectItemsDeleteBtn" Style="{DynamicResource versesTabActionButtonReset}" Grid.Column="2" Tag="TrashMD" />
+                    </Border>
                 </StackPanel>
             </Border>
         </Border>
 
-        <Border Grid.Row="2" Padding="20">
+        <Border Grid.Row="1" x:Name="loadControlAni" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Button x:Name="backButton" Grid.Column="1" Content="Geri Dön" Tag="ArrowLeft"  Style="{DynamicResource noteControlBackBtn}" Click="backButton_Click" />
+                <Button x:Name="noteButton" Grid.Column="2" Content="Not Al-Oku" Tag="JournalBookmark" Style="{DynamicResource noteControlBackNote}" Click="noteButton_Click" />
+                <Button x:Name="openFileWindowButton" Grid.Column="3"  Content="Pencerede Aç" Tag="ArrowRight"  Style="{DynamicResource noteControlBackGo}" Click="openFileWindowButton_Click" />
+            </Grid>
+        </Border>
+
+        <Border Grid.Row="2" Padding="20" x:Name="loadDetailAni" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
             <cef:ChromiumWebBrowser x:Name="pdfviewer" Address="" Width="Auto" Height="Auto" />
         </Border>
     </Grid>
