--- a/KuranX.App/Core/Pages/NoteF/NoteItem.xaml
+++ b/KuranX.App/Core/Pages/NoteF/NoteItem.xaml
@@ -1,54 +1,18 @@
-﻿<Page x:Class="KuranX.App.Core.Pages.LibraryF.libraryNote"
+﻿<Page x:Class="KuranX.App.Core.Pages.NoteF.NoteItem"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:KuranX.App.Core.Pages"
+        xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
        xmlns:gif="http://wpfanimatedgif.codeplex.com"
-         xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
       mc:Ignorable="d"
-        d:DesignHeight="708" d:DesignWidth="1115" d:MaxHeight="708" d:MaxWidth="1270" d:MinWidth="1115"
-      Title="LibraryNote"  Background="#FAFAFA" Loaded="Page_Loaded">
-
+      d:DesignHeight="708" d:DesignWidth="1115" d:MaxHeight="708" d:MaxWidth="1270" d:MinWidth="1115"
+      Title="NoteItem" Background="#FAFAFA" Loaded="Page_Loaded">
     <Grid>
-
         <Grid x:Name="loadinGifContent" Grid.Row="1" Background="#FAFAFA" Panel.ZIndex="5" Visibility="Collapsed">
             <Image gif:ImageBehavior.AnimatedSource="/Resource/Images/Gif/Spinner800.gif" Width="250" Height="250"  RenderOptions.BitmapScalingMode="HighQuality" />
         </Grid>
-
-        <Popup x:Name="deleteNotepopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="300" Height="190" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
-
-            <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="280" Height="170">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="50" />
-                        <RowDefinition Height="120" />
-                    </Grid.RowDefinitions>
-                    <Border  Grid.Row="0" Style="{DynamicResource headerBorderTemp}">
-                        <TextBlock Text="Konuyu Sil" Style="{DynamicResource popupHeaderText}" />
-                    </Border>
-                    <Grid Grid.Row="1">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="50" />
-                        </Grid.RowDefinitions>
-                        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Width="280" Grid.Row="0">
-                            <TextBlock Text="Notu silmek istediğinize emin misiniz ? " TextWrapping="Wrap" TextAlignment="Center" FontFamily="{DynamicResource PoppinsMedium}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                        </StackPanel>
-                        <Grid Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-
-                            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0">
-                                <Button x:Name="deleteSubjectPopupBtn" Style="{DynamicResource popupDefaultButtonRest}" Tag="Trash" Content="Sil" HorizontalAlignment="Center" Click="deleteNotePopupBtn_Click" />
-                                <Button  Style="{DynamicResource popupDefaultButtonClosed}" Tag="CloseBig" Content="Vazgeç" Uid="deleteNotepopup" HorizontalAlignment="Center" Click="popupClosed_Click" />
-                            </StackPanel>
-                        </Grid>
-                    </Grid>
-                </Grid>
-            </Border>
-        </Popup>
 
         <Popup x:Name="alph" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="460" Height="200" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
             <Border  Style="{DynamicResource defaultBorderShadowEffect}" Width="440" Height="180">
@@ -135,29 +99,65 @@
             </Border>
         </Popup>
 
-        <Border Padding="20" Style="{DynamicResource aniEffectFadeBorder}" x:Name="loadBorder" Visibility="Visible">
+        <Popup x:Name="deleteNotepopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="300" Height="190" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+
+            <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="280" Height="170">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50" />
+                        <RowDefinition Height="120" />
+                    </Grid.RowDefinitions>
+                    <Border  Grid.Row="0" Style="{DynamicResource headerBorderTemp}">
+                        <TextBlock Text="Konuyu Sil" Style="{DynamicResource popupHeaderText}" />
+                    </Border>
+                    <Grid Grid.Row="1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="50" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Width="280" Grid.Row="0">
+                            <TextBlock Text=" Notu Silmek istediğinize eminmisiniz bu işlem geri alınamaz. " TextWrapping="Wrap" TextAlignment="Center" FontFamily="{DynamicResource PoppinsMedium}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </StackPanel>
+                        <Grid Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0">
+                                <Button x:Name="deleteSubjectPopupBtn" Style="{DynamicResource popupDefaultButtonRest}" Tag="Trash" Content="Sil" HorizontalAlignment="Center" Click="deleteNotePopupBtn_Click" />
+                                <Button  Style="{DynamicResource popupDefaultButtonClosed}" Tag="CloseBig" Content="Vazgeç" Uid="deleteNotepopup" HorizontalAlignment="Center" Click="popupClosed_Click" />
+                            </StackPanel>
+                        </Grid>
+                    </Grid>
+                </Grid>
+            </Border>
+        </Popup>
+
+        <Border Padding="10 5 10 5" Style="{DynamicResource aniEffectFadeBorder}" x:Name="loadBorder" Visibility="Visible">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="100" />
                     <RowDefinition Height="70" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-
                 <StackPanel Grid.Row="0" Orientation="Vertical" VerticalAlignment="Center">
                     <Border Style="{DynamicResource frameTab}">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="250" />
                             </Grid.ColumnDefinitions>
                             <StackPanel Grid.Column="0" Orientation="Vertical" Margin="10 5 10 5">
-                                <TextBlock x:Name="LibHeader" Text="Note NAME" Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="17" />
+                                <TextBlock x:Name="header" Text="Note NAME" Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="16" />
                                 <TextBlock x:Name="create" Text="CREATE" Foreground="#7B7B7B" FontFamily="{DynamicResource PoppinsMedium}" FontSize="10" Margin="0 5 0 5" />
-                                <TextBlock x:Name="header" Text="LOCATİON" Foreground="#C9283E" FontFamily="{DynamicResource PoppinsMedium}" FontSize="10" />
+                                <TextBlock x:Name="location" Text="LOCATİON" Foreground="#C9283E" FontFamily="{DynamicResource PoppinsMedium}" FontSize="10" />
+                            </StackPanel>
+                            <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
+                                <TextBlock TextWrapping="Wrap" TextAlignment="Center" Width="250" x:Name="infoText" Text="Selected VALUES" Foreground="#C9283E" FontFamily="{DynamicResource PoppinsMedium}" FontSize="12" />
                             </StackPanel>
                         </Grid>
                     </Border>
                 </StackPanel>
-
                 <Grid Grid.Row="1"  Grid.ColumnSpan="2">
 
                     <Grid.ColumnDefinitions>
@@ -175,11 +175,10 @@
                     <Button x:Name="gotoBackButton" Grid.Column="0" Style="{DynamicResource noteControlBackBtn}" Tag="ArrowLeft" Content="Geri Dön" Click="gotoBackButton_Click" />
                     <Button x:Name="gotoVerseButton" Grid.Column="1" Style="{DynamicResource noteControlBackGo}" Tag="ArrowRight" Content="Ayete Git" Click="gotoVerseButton_Click" />
                     <Button x:Name="sendResult" Grid.Column="2" Style="{DynamicResource noteControlBackSend}" Tag="Archive" Content="Sonuç" />
-                    <Button x:Name="printButton" Grid.Column="3" Style="{DynamicResource noteControlBackPrint}" Tag="Printer" Content="Yazdır" />
+                    <Button x:Name="printButton" Grid.Column="3" Style="{DynamicResource noteControlBackPrint}" Tag="Printer" Content="Yazdır" Click="printButton_Click" />
                     <Button x:Name="deleteButton" Grid.Column="4" Style="{DynamicResource noteControlBackDelete}" Tag="Trash" Content="Notu Sil" Click="deleteButton_Click" />
                     <Button x:Name="saveButton" Grid.Column="5" IsEnabled="False" Style="{DynamicResource noteControlBackSave}" Tag="Save" Content="Kaydet" Click="saveButton_Click" />
                 </Grid>
-
                 <Border Grid.Row="3" Grid.ColumnSpan="2" Padding="10" Background="#fff" Style="{DynamicResource defaultBorderShadowEffect}">
 
                     <TextBox x:Name="noteDetail" TextWrapping="Wrap" AcceptsReturn="True" MaxLength="3500" Style="{DynamicResource noteDetailTxtBox}" Text="" TextChanged="noteDetail_TextChanged" />
