--- a/KuranX.App/Core/Pages/SubjectF/SubjectFrame.xaml
+++ b/KuranX.App/Core/Pages/SubjectF/SubjectFrame.xaml
@@ -12,9 +12,9 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="160" />
+            <RowDefinition Height="155" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="85" />
+            <RowDefinition Height="90" />
         </Grid.RowDefinitions>
 
         <Grid x:Name="loadinGifContent" Grid.Row="1" Background="#FAFAFA" Panel.ZIndex="5">
@@ -170,7 +170,7 @@
             </Border>
         </Popup>
 
-        <Border Grid.Row="0" Padding="20 10 20 10">
+        <Border Grid.Row="0" Padding="20 10 20 10" x:Name="loadBorderHeader"  Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
             <StackPanel Orientation="Vertical">
                 <Grid>
 
@@ -197,7 +197,7 @@
             </StackPanel>
         </Border>
 
-        <Border Grid.Row="1">
+        <Border Grid.Row="1" x:Name="loadBorder" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="350" />
@@ -516,18 +516,18 @@
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
 
-            <StackPanel Style="{DynamicResource ResourceKey=ayetlerControlBarStack}">
+            <StackPanel Style="{DynamicResource ResourceKey=ayetlerControlBarStack}" Height="50">
                 <StackPanel Style="{DynamicResource ResourceKey=ayetlerControlItems}">
-                    <Button x:Name="previusPageButton" Style="{DynamicResource ResourceKey=ayetlerControlItemPageButtonLeft}" Tag="AngleLeft" Content="Önceki Sayfa" Click="previusPageButton_Click" />
+                    <Button IsEnabled="False" x:Name="previusPageButton" Style="{DynamicResource ResourceKey=ayetlerControlItemPageButtonLeft}" Tag="AngleLeft" Content="Önceki Sayfa" Click="previusPageButton_Click" />
                 </StackPanel>
                 <StackPanel Style="{DynamicResource ResourceKey=ayetlerControlItems}">
-                    <Button x:Name="nowPageStatus" Style="{DynamicResource ResourceKey=ayetlerControlItemOtherButton}" Tag="1 / 1" Content="Sayfa" />
+                    <Button IsEnabled="False" x:Name="nowPageStatus" Style="{DynamicResource ResourceKey=ayetlerControlItemOtherButton}" Tag="1 / 1" Content="Sayfa" />
                 </StackPanel>
                 <StackPanel Style="{DynamicResource ResourceKey=ayetlerControlItems}">
-                    <Button x:Name="totalcountText" Style="{DynamicResource ResourceKey=ayetlerControlItemOtherButtonCount}" Tag="-" Content="Konu" />
+                    <Button IsEnabled="False" x:Name="totalcountText" Style="{DynamicResource ResourceKey=ayetlerControlItemOtherButtonCount}" Tag="-" Content="Konu" />
                 </StackPanel>
                 <StackPanel Style="{DynamicResource ResourceKey=ayetlerControlItems}">
-                    <Button x:Name="nextpageButton" Style="{DynamicResource ResourceKey=ayetlerControlItemPageButtonRight}" Tag="AngleRight" Content="Sonraki Sayfa" Click="nextpageButton_Click" />
+                    <Button IsEnabled="False" x:Name="nextpageButton" Style="{DynamicResource ResourceKey=ayetlerControlItemPageButtonRight}" Tag="AngleRight" Content="Sonraki Sayfa" Click="nextpageButton_Click" />
                 </StackPanel>
             </StackPanel>
         </StackPanel>
