--- a/KuranX.App/Core/Pages/VerseF/verseFrame.xaml
+++ b/KuranX.App/Core/Pages/VerseF/verseFrame.xaml
@@ -620,13 +620,13 @@
                 </Border>
             </Popup>
 
-            <Popup x:Name="noteAddPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="400" Height="470" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup x:Name="noteAddPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="400" Height="540" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
-                <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="380" Height="450">
+                <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="380" Height="520">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="50" />
-                            <RowDefinition Height="400" />
+                            <RowDefinition Height="470" />
                         </Grid.RowDefinitions>
                         <Border  Grid.Row="0" Style="{DynamicResource headerBorderTemp}">
                             <TextBlock Text="Yeni Not Al" Style="{DynamicResource popupHeaderText}" />
@@ -649,8 +649,17 @@
                                     <Label Visibility="Hidden" x:Name="noteAddPopupHeaderError" Style="{DynamicResource popupDefaultTextBoxLabel}"></Label>
                                 </StackPanel>
 
-                                <TextBlock Text="Seçili Ayeti" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" />
+                                <TextBlock Text="Seçili Ayeti" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 0" />
                                 <TextBox Style="{DynamicResource popupDefaulTextBox}" Width="280" x:Name="noteConnectVerse" IsReadOnly="True">
+                                    <TextBox.Resources>
+                                        <Style TargetType="{x:Type Border}">
+                                            <Setter Property="CornerRadius" Value="5" />
+                                        </Style>
+                                    </TextBox.Resources>
+                                </TextBox>
+
+                                <TextBlock Text="Not Türü" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 10 0 0" />
+                                <TextBox Style="{DynamicResource popupDefaulTextBox}" Width="280" x:Name="noteType" IsReadOnly="True">
                                     <TextBox.Resources>
                                         <Style TargetType="{x:Type Border}">
                                             <Setter Property="CornerRadius" Value="5" />
