--- a/KuranX.App/Core/ResourceXaml/popupDesing.xaml
+++ b/KuranX.App/Core/ResourceXaml/popupDesing.xaml
@@ -348,6 +348,43 @@
         </Style.Triggers>
     </Style>
 
+    <Style x:Key="viewNoteType" TargetType="CheckBox">
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="#1C1E2F" />
+        <Setter Property="BorderBrush" Value="#565760" />
+        <Setter Property="Margin" Value="10 0 10 0" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border x:Name="viewPopBg" CornerRadius="5" Background="{TemplateBinding Background}" BorderThickness="1" BorderBrush="{TemplateBinding BorderBrush}" Padding="15 3 15 3">
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <Icon:PackIconBootstrapIcons x:Name="viewPopIcon" Kind="{Binding Path=Tag,RelativeSource={RelativeSource TemplatedParent}}" Width="14" Height="14" VerticalAlignment="Center"  HorizontalAlignment="Center" Foreground="{TemplateBinding Foreground}" />
+                            <TextBlock x:Name="viewPopTxt" Text="{Binding Path=Content,RelativeSource={RelativeSource TemplatedParent}}" Margin="5 0 0 0" Foreground="{TemplateBinding Foreground}" FontFamily="{DynamicResource PoppinsMedium}" FontSize="12" />
+                        </StackPanel>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#F0433A" TargetName="viewPopBg" />
+                            <Setter Property="BorderBrush" Value="#F0433A" TargetName="viewPopBg" />
+                            <Setter Property="Foreground" Value="#FFF" TargetName="viewPopTxt" />
+                            <Setter Property="Foreground" Value="#FFF" TargetName="viewPopIcon" />
+                            <Setter Property="Cursor" Value="Hand" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsChecked" Value="True">
+                <Setter Property="Background" Value="#F0433A" />
+                <Setter Property="BorderBrush" Value="#F0433A" />
+                <Setter Property="Foreground" Value="#FFF" />
+                <Setter Property="Foreground" Value="#FFF" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
     <!-- Button -->
 
     <!-- DynamicStyle -->
